Updated landing version

--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -99,43 +99,21 @@
                                             <div class="nav-collapse-inner">
                                                 <ul class="navbar-nav nav-lvl--2">
                                                     <li class="nav-item common-nav-item">
-                                                        <a class="nav-link" href="/pages/actualites.html">Actualités</a>
-                                                    </li>
-                                                    <li class="nav-item common-nav-item">
                                                         <a class="nav-link" href="/pages/travaux.html">Travaux en
                                                             cours</a>
+                                                    <li class="nav-item common-nav-item">
+                                                        <a class="nav-link" href="/pages/replay.html">Le Hub en replay</a>
+                                                    </li>
+                                                    
                                                     </li>
                                                 </ul>
                                             </div>
                                         </div>
                                     </li>
                                     <li class="nav-item common-nav-item">
-                                        <button class="nav-link" type="button" data-toggle="collapse"
-                                            data-target="#nav1-nav-collapse-submenu--3"
-                                            aria-controls="nav1-nav-collapse-submenu--3"
-                                            aria-expanded="false">Accompagnement</button>
-                                        <div class="collapse nav-collapse" id="nav1-nav-collapse-submenu--3"
-                                            data-parent="#menuPrincipal">
-                                            <div class="nav-collapse-inner">
-                                                <ul class="navbar-nav nav-lvl--2">
-                                                    <li class="nav-item common-nav-item">
-                                                        <a class="nav-link" href="/pages/webinaires.html">Webinaires</a>
-                                                    </li>
-                                                    <li class="nav-item common-nav-item">
-                                                        <a class="nav-link" href="#">Ressources éditeurs</a>
-                                                        <ul class="navbar-nav nav-lvl--3">
-                                                            <li class="nav-item common-nav-item">
-                                                                <a class="nav-link" href="/pages/15-18.html">15-18</a>
-                                                            </li>
-                                                            <li class="nav-item common-nav-item">
-                                                                <a class="nav-link" href="/pages/15-15.html">15-15</a>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
+                                        <a class="nav-link" href="/pages/accompagnement.html">Accompagnement</a>
                                     </li>
+
                                     <li class="nav-item common-nav-item">
                                         <a class="nav-link" href="/pages/contacts.html">Vos contacts</a>
                                     </li>
@@ -233,7 +211,7 @@
                     <div class="o-banner__clip o-banner__clip--1">
 
 
-                        <img src="/img/ans/Tablette.jpeg" alt="" width="279" height="202">
+                        <img src="/img/ans/IMG_Professionnel de santé libéral.jpeg" alt="" width="279" height="202">
 
 
 
@@ -297,16 +275,7 @@
                         </div>
                     </div>
                     <div class="o-paragraph--columns__cards row col--eq-height mt-4">
-                        <div class="mb-3 col-sm-6 col-lg-3 ">
-                            <a href="/pages/15-18.html"
-                                class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0">
-                                <div class="m-card__img">
-                                    <img src="/img/resize/Image Nexis_RC.png" alt="" loading="lazy">
-                                </div>
-                                <h3 class="m-card__title h4">15-18</h3>
-                                <p class="mb-lg-1">avec NexSIS (système national de gestion des alertes des SDIS)</p>
-                            </a>
-                        </div>
+
                         <div class="mb-3 col-sm-6 col-lg-3">
                             <a href="/pages/15-15.html"
                                 class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0">
@@ -314,28 +283,38 @@
                                     <img src="/img/resize/IMG_SAMU_RC.jpg" alt="" loading="lazy">
                                 </div>
                                 <h3 class="m-card__title h4">15-15</h3>
-                                <p class="mb-lg-1">avec le LRM d'un autre SAMU (quel que soit l'éditeur)</p>
+                                <p class="mb-lg-1">avec le LRM d'un autre SAMU (quel que soit l'éditeur).</p>
                             </a>
                         </div>
                         <div class="mb-3 col-sm-6 col-lg-3">
                             <div class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0">
                                 <div class="m-card__img">
-                                    <img src="/img/resize/SICAP_RC.jpg" alt="" loading="lazy">
+                                    <img src="/img/resize/tablette_RC.jpg" alt="" loading="lazy">
                                 </div>
-                                <h3 class="m-card__title h4">15-17</h3>
-                                <p class="mb-lg-1">15-17, avec les systèmes nationaux de la Police et de la Gendarmerie
+                                <h3 class="m-card__title h4">15-SMUR/RPIS</h3>
+                                <p class="mb-lg-1">15-SMUR/RPIS, avec les tablettes SMUR et les concentrateurs RPIS.
                                 </p>
                             </div>
+                        </div>
+                        <div class="mb-3 col-sm-6 col-lg-3 ">
+                            <a href="/pages/15-18.html"
+                                class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0">
+                                <div class="m-card__img">
+                                    <img src="/img/resize/Nexsis.jpg" alt="" loading="lazy">
+                                </div>
+                                <h3 class="m-card__title h4">15-NexSIS</h3>
+                                <p class="mb-lg-1">avec NexSIS (système national de SDIS).</p>
+                            </a>
                         </div>
                         <div class="mb-3 col-sm-6 col-lg-3">
                             <div class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0 pb-lg-2">
                                 <div class="m-card__img">
-                                    <img src="/img/resize/IMG_Cadres de references et standards_RC.jpg" alt=""
+                                    <img src="/img/resize/SICAP_RC.jpg" alt=""
                                         loading="lazy">
                                 </div>
                                 <h3 class="m-card__title h4">15-X</h3>
-                                <p>avec tout autre logiciel partenaire du SAMU (hélicoptères, tablettes SMUR, SI-CAP,
-                                    CNR114...)
+                                <p>avec tout autre logiciel partenaire (Gendarmerie, Hélicoptères, SI-CAP,
+                                    CNR114, etc.).
                                 </p>
                                 </a>
                             </div>
@@ -546,13 +525,13 @@
                 <div class="col-6 col-lg-3">
                     <ul class="footer-list">
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/15-18.html">
+                            <a href="/pages/accompagnement.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/webinaires.html">
+                            <a href="/pages/replay.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Webinaires</a>
