--- a/web/landing/pages-footer/mentions_legales.html
+++ b/web/landing/pages-footer/mentions_legales.html
@@ -82,7 +82,7 @@
 
                             <nav role="navigation" aria-label="Menu principal">
                                 <ul class="navbar-nav nav-lvl--1">
-                                    <li class="nav-item common-nav-item">                   
+                                    <li class="nav-item common-nav-item">
                             <ul class="nav-right">
                                 <li class="nav-right-item collapse-wrapper common-nav-item">
                                     <button type="button" class="btn btn--icon-only btn-icon--header"
@@ -118,17 +118,16 @@
                                                                 class="o-widget-access__label btn btn--ghost btn--primary btn-sm"
                                                                 for="high-c"><span class="sr-only">Contrastes</span>
                                                                 Renforcés</label>
-                                                        
+
                                                     </fieldset>
                                                 </div>
                                             </div>
                                         </div>
-                                    </ul> 
-                                </li> 
-                            </ul> 
-                        </div> 
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
     </header>
-
     
 <!-- Emplacement du Header -->
 <main class="main bg-drop bg-drop--reverse bg-white" role="main" id="main" tabindex="-1">
@@ -339,13 +338,13 @@
                 <div class="col-6 col-lg-3">
                     <ul class="footer-list">
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/15-18.html">
+                            <a href="/pages/accompagnement.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/webinaires.html">
+                            <a href="/pages/replay.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Webinaires</a>
@@ -404,7 +403,6 @@
         </div>
     </div>
 </footer>
-
 
 
 </html>
