--- a/web/landing/pages/contacts.html
+++ b/web/landing/pages/contacts.html
@@ -100,43 +100,21 @@
                                             <div class="nav-collapse-inner">
                                                 <ul class="navbar-nav nav-lvl--2">
                                                     <li class="nav-item common-nav-item">
-                                                        <a class="nav-link" href="/pages/actualites.html">Actualités</a>
-                                                    </li>
-                                                    <li class="nav-item common-nav-item">
                                                         <a class="nav-link" href="/pages/travaux.html">Travaux en
                                                             cours</a>
+                                                    <li class="nav-item common-nav-item">
+                                                        <a class="nav-link" href="/pages/replay.html">Le Hub en replay</a>
+                                                    </li>
+                                                    
                                                     </li>
                                                 </ul>
                                             </div>
                                         </div>
                                     </li>
                                     <li class="nav-item common-nav-item">
-                                        <button class="nav-link" type="button" data-toggle="collapse"
-                                            data-target="#nav1-nav-collapse-submenu--3"
-                                            aria-controls="nav1-nav-collapse-submenu--3"
-                                            aria-expanded="false">Accompagnement</button>
-                                        <div class="collapse nav-collapse" id="nav1-nav-collapse-submenu--3"
-                                            data-parent="#menuPrincipal">
-                                            <div class="nav-collapse-inner">
-                                                <ul class="navbar-nav nav-lvl--2">
-                                                    <li class="nav-item common-nav-item">
-                                                        <a class="nav-link" href="/pages/webinaires.html">Webinaires</a>
-                                                    </li>
-                                                    <li class="nav-item common-nav-item">
-                                                        <a class="nav-link" href="#">Ressources éditeurs</a>
-                                                        <ul class="navbar-nav nav-lvl--3">
-                                                            <li class="nav-item common-nav-item">
-                                                                <a class="nav-link" href="/pages/15-18.html">15-18</a>
-                                                            </li>
-                                                            <li class="nav-item common-nav-item">
-                                                                <a class="nav-link" href="/pages/15-15.html">15-15</a>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
+                                        <a class="nav-link" href="/pages/accompagnement.html">Accompagnement</a>
                                     </li>
+
                                     <li class="nav-item is-active common-nav-item">
                                         <a class="nav-link" href="/pages/contacts.html">Vos contacts</a>
                                     </li>
@@ -408,13 +386,13 @@
                 <div class="col-6 col-lg-3">
                     <ul class="footer-list">
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/15-18.html">
+                            <a href="/pages/accompagnement.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/webinaires.html">
+                            <a href="/pages/replay.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Webinaires</a>
