--- a/web/landing/pages/Z-Archives.html
+++ b/web/landing/pages/Z-Archives.html
@@ -51,3 +51,57 @@
 
                                                     <img src="/img/crea/Image webinaire 1 finale.png" alt="" width="585"
                                                         height="329" loading="lazy">
+
+
+
+ 
+ 
+<!-- Bannière Webinaires -->
+            <!-- SVG pour les formes/pétales. A ajouter seulement une fois dans la page -->
+            <svg class="d-block" aria-hidden="true" focusable="false" height="0" width="0">
+                <defs>
+                    <clipPath id="mask-mise-en-avant" clipPathUnits="objectBoundingBox">
+                        <path
+                                d="M1,0.5 L1,0.5 C1,0.776,0.793,1,0.538,1 L0,1 C0.04,0.961,0.074,0.882,0.077,0.723 L0.077,0.5 C0.077,0.224,0.283,0,0.538,0 C0.793,0,1,0.224,1,0.5"/>
+                    </clipPath>
+                </defs>
+            </svg>
+            <div class="py-2">
+                <div class="container paragraph-space">
+                    <div class="o-paragraph--image-texte-cta leftVisual">
+                        <div
+                                class="o-paragraph--image-texte-cta__content bg-white rounded-lg top-left-radius-0 shadow-lg">
+                            <h2>Webinaires</h2>
+                            <div class="wysiwyg mb-3">
+                                <p>Retrouvez tous les webinaires du Hub, pour vous accompagner dans vos
+                                    développements
+                                    et répondre à vos questions.
+                                </p>
+                            </div>
+                            <div class="paragraph--lien">
+                                <a href="/pages/webinaires.html" class="btn btn--style1 btn--white">Visionnez</a>
+                            </div>
+                        </div>
+                        <div class="o-paragraph--image-texte-cta__img d-none d-md-block">
+                            <img src="/img/resize/Bandeau_webinaires_ordinateur.jpg" alt="" width="422" height="390"
+                                 loading="lazy">
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+<!-- Sous menu bandeau haut -->
+            <li class="nav-item common-nav-item">
+                <a class="nav-link" href="#">Ressources éditeurs</a>
+                <ul class="navbar-nav nav-lvl--3">
+                    <li class="nav-item common-nav-item">
+                        <a class="nav-link" href="/pages/15-18.html">15-18</a>
+                    </li>
+                    <li class="nav-item common-nav-item">
+                        <a class="nav-link" href="/pages/15-15.html">15-15</a>
+                    </li>
+                </ul>
+            </li>
