--- a/web/landing/pages/travaux.html
+++ b/web/landing/pages/travaux.html
@@ -89,7 +89,7 @@
                                         <a class="nav-link" href="/index.html">Bienvenue<span class="sr-only">(page
                                                 courante)</span></a>
                                     </li>
-                                    <li class="nav-item is-active common-nav-item">
+                                    <li class="nav-item common-nav-item">
                                         <button class="nav-link" type="button" data-toggle="collapse"
                                             data-target="#nav1-nav-collapse-submenu--2"
                                             aria-controls="nav1-nav-collapse-submenu--2" aria-expanded="false">Le Hub
@@ -98,44 +98,22 @@
                                             data-parent="#menuPrincipal">
                                             <div class="nav-collapse-inner">
                                                 <ul class="navbar-nav nav-lvl--2">
-                                                    <li class="nav-item common-nav-item">
-                                                        <a class="nav-link" href="/pages/actualites.html">Actualités</a>
-                                                    </li>
                                                     <li class="nav-item is-active common-nav-item">
                                                         <a class="nav-link" href="/pages/travaux.html">Travaux en
                                                             cours</a>
+                                                    <li class="nav-item common-nav-item">
+                                                        <a class="nav-link" href="/pages/replay.html">Le Hub en replay</a>
+                                                    </li>
+                                                    
                                                     </li>
                                                 </ul>
                                             </div>
                                         </div>
                                     </li>
                                     <li class="nav-item common-nav-item">
-                                        <button class="nav-link" type="button" data-toggle="collapse"
-                                            data-target="#nav1-nav-collapse-submenu--3"
-                                            aria-controls="nav1-nav-collapse-submenu--3"
-                                            aria-expanded="false">Accompagnement</button>
-                                        <div class="collapse nav-collapse" id="nav1-nav-collapse-submenu--3"
-                                            data-parent="#menuPrincipal">
-                                            <div class="nav-collapse-inner">
-                                                <ul class="navbar-nav nav-lvl--2">
-                                                    <li class="nav-item common-nav-item">
-                                                        <a class="nav-link" href="/pages/webinaires.html">Webinaires</a>
-                                                    </li>
-                                                    <li class="nav-item common-nav-item">
-                                                        <a class="nav-link" href="#">Ressources éditeurs</a>
-                                                        <ul class="navbar-nav nav-lvl--3">
-                                                            <li class="nav-item common-nav-item">
-                                                                <a class="nav-link" href="/pages/15-18.html">15-18</a>
-                                                            </li>
-                                                            <li class="nav-item common-nav-item">
-                                                                <a class="nav-link" href="/pages/15-15.html">15-15</a>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
+                                        <a class="nav-link" href="/pages/accompagnement.html">Accompagnement</a>
                                     </li>
+
                                     <li class="nav-item common-nav-item">
                                         <a class="nav-link" href="/pages/contacts.html">Vos contacts</a>
                                     </li>
@@ -192,7 +170,6 @@
             </div>
         </div>
     </header>
-
     <div class="body-wrapper">
         <!-- Emplacement du Header -->
         <main class="main bg-drop bg-drop--reverse bg-white" role="main" id="main" tabindex="-1">
@@ -247,53 +224,7 @@
                 </div>
             </div>
 
-            <!-- Titre 15-18 -->
-            <div class="bg-white">
-                <div class="container paragraph-space paragraph--title-text text-center pt-2 pb-1">
-                    <h1>15-18</h1>
-                </div>
-            </div>
-            <!-- Bannière Enjeux 15-18 -->
-            <div class="container paragraph-space">
-                <div class="row">
-                    <div class="col-md-8 mb-3">
-                        <h2>Les enjeux du 15-18 </h2>
-                        <div class="wysiwyg mb-3">
-                            <ul>
-                                <li>Rendre les LRM interopérables avec le système d’information des pompiers et
-                                    développer de nouvelles fonctionnalités grâce à l’échange de ces nouveaux flux de
-                                    données.
-                                </li>
-                                <li>Permettre l’interfaçage de NexSIS, le futur système d’information et de commandement
-                                    unifié des services d’incendie et de secours, avec n’importe quel SAMU sans
-                                    développement d’un lien spécifique.
-                                </li>
-                                <li>Garantir des échanges de données sécurisés via un cadre d’interopérabilité
-                                    coconstruit.
-                                </li>
-                            </ul>
-                        </div>
 
-                        <div class="paragraph--lien">
-                            <a href="/pages/15-18.html" class="btn btn--style1 btn--white">Ressources 15-18</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4 order-md-last">
-                        <div class="rounded-md top-left-radius-0 bg-primary text-white px-3 py-4">
-                            <div class="wysiwyg">
-                                <h3>Les pilotes</h3>
-                                <ul>
-                                    <li>NexSIS - SAMU 09 (BISOM)</li>
-                                    <li>NexSIS - SAMU 44 (Inetum)</li>
-                                    <li>NexSIS - SAMU 50 (RRAMU)</li>
-                                    <li>NexSIS - SAMU 78 (Appligos)</li>
-                                    <li>NexSIS - SAMU 95 (Scriptal)</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
             <!-- Titre 15-15 -->
             <div class="bg-white">
@@ -323,11 +254,11 @@
                         </div>
 
                         <div class="paragraph--lien">
-                            <a href="/pages/15-15.html" class="btn btn--style1 btn--white">Ressources 15-15</a>
+                            <a href="/pages/accompagnement.html" class="btn btn--style1 btn--white">Ressources éditeurs</a>
                         </div>
                     </div>
                     <div class="col-md-4 order-md-first">
-                        <div class="rounded-md top-left-radius-0 bg-primary text-white px-3 py-4">
+                        <div class="rounded-md top-left-radius-0 bg-primary text-white px-2 py-4">
                             <div class="wysiwyg">
                                 <h3>Les pilotes</h3>
                                 <ul>
@@ -346,13 +277,106 @@
                 </div>
             </div>
 
-            <script type="text/javascript" src="/script/jquery-3.5.1.min.js"></script>
-            <script type="text/javascript" src="/script/vendor.js"></script>
-            <script type="text/javascript" src="/script/app.js"></script>
-            <script type="text/javascript" src="/script/tiny-slider.js"></script>
-            <script type="text/javascript" src="/script/bloc-o-remontees-diverses.js"></script>
-            <script type="text/javascript" src="/script/bloc-global-sliders.js"></script>
 
+
+            <!-- Titre 15-SMUR/RPIS -->
+            <div class="bg-white">
+                <div class="container paragraph-space paragraph--title-text text-center pt-2 pb-1">
+                    <h1>15-SMUR/RPIS</h1>
+                </div>
+            </div>
+
+            <!-- Bannière Enjeux 15-SMUR -->
+            <div class="container paragraph-space">
+                <div class="row">
+                    <div class="col-md-8 mb-3">
+                        <h2>Les enjeux du 15-SMUR/RPIS </h2>
+                        <div class="wysiwyg mb-3">
+                            <ul>
+                                <li>Permettre aux LRM et tablettes SMUR d'échanger des données opérationnelles, telles que les informations dossier, la géolocalisation des SMUR ou encore les états de situation des SMUR.
+                                </li>
+                                <li>Remonter les données RPIS vers les ORU ou les infocentres régionaux depuis les tablettes SMUR, en vue de l'arrêté sur le RPIS à venir, avec une application pour 2025. 
+                                </li>
+                                <li> Echanger des dossiers complets vers les partenaires des SMUR (infocentres régionaux, archives SMUR, établissements de santé receveurs).
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="paragraph--lien">
+                            <a href="/pages/accompagnement.html" class="btn btn--style1 btn--white">Ressources éditeurs</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 order-md-last">
+                        <div class="rounded-md top-left-radius-0 bg-primary text-white px-2 py-4">
+                            <div class="wysiwyg">
+                                <h3>Les pilotes</h3>
+                                <ul>
+                                    <li>SAMU 85 (BISOM / Inetum), SAMU 73 (BISOM / Appligos)</li>
+                                    <li>SAMU 80 (Exos / Exos) </li>
+                                    <li>SAMU 21-58 et 86 (Nomadeec / Inetum) </li>
+                                    <li>SAMU 68 (SMUR-T@b / Appligos), SAMU 55 (SMUR-T@b / Exos) </li>
+                                    <li>SAMU 94 (Parsys / Inetum)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Titre 15-NexSIS -->
+            <div class="bg-white">
+                <div class="container paragraph-space paragraph--title-text text-center pt-2 pb-1">
+                    <h1>15-NexSIS</h1>
+                </div>
+            </div>
+            <!-- Bannière Enjeux 15-18 -->
+            <div class="container paragraph-space">
+                <div class="row">
+                    <div class="col-md-8 mb-3">
+                        <h2>Les enjeux du 15-NexSIS </h2>
+                        <div class="wysiwyg mb-3">
+                            <ul>
+                                <li>Rendre les LRM interopérables avec le système d’information des pompiers et
+                                    développer de nouvelles fonctionnalités grâce à l’échange de ces nouveaux flux de
+                                    données.
+                                </li>
+                                <li>Permettre l’interfaçage de NexSIS, le futur système d’information et de commandement
+                                    unifié des services d’incendie et de secours, avec n’importe quel SAMU sans
+                                    développement d’un lien spécifique.
+                                </li>
+                                <li>Garantir des échanges de données sécurisés via un cadre d’interopérabilité
+                                    coconstruit.
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="paragraph--lien">
+                            <a href="/pages/accompagnement.html" class="btn btn--style1 btn--white">Ressources éditeurs</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 order-md-first">
+                        <div class="rounded-md top-left-radius-0 bg-primary text-white px-2 py-4">
+                            <div class="wysiwyg">
+                                <h3>Les pilotes</h3>
+                                <ul>
+                                    <li>NexSIS - SAMU 09 (BISOM)</li>
+                                    <li>NexSIS - SAMU 44 (Inetum)</li>
+                                    <li>NexSIS - SAMU 50 (RRAMU)</li>
+                                    <li>NexSIS - SAMU 78 (Appligos)</li>
+                                    <li>NexSIS - SAMU 95 (Scriptal)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+<script type="text/javascript" src="/script/jquery-3.5.1.min.js"></script>
+<script type="text/javascript" src="/script/vendor.js"></script>
+<script type="text/javascript" src="/script/app.js"></script>
+<script type="text/javascript" src="/script/tiny-slider.js"></script>
+<script type="text/javascript" src="/script/bloc-o-remontees-diverses.js"></script>
+<script type="text/javascript" src="/script/bloc-global-sliders.js"></script>
 </body>
 
 <!-- Bandeau bas -->
@@ -446,13 +470,13 @@
                 <div class="col-6 col-lg-3">
                     <ul class="footer-list">
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/15-18.html">
+                            <a href="/pages/accompagnement.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/webinaires.html">
+                            <a href="/pages/replay.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Webinaires</a>
@@ -511,7 +535,6 @@
         </div>
     </div>
 </footer>
-
 
 
 
