Switching back to webinaires.html for link back compat

--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -102,7 +102,7 @@
                                                         <a class="nav-link" href="/pages/travaux.html">Travaux en
                                                             cours</a>
                                                     <li class="nav-item common-nav-item">
-                                                        <a class="nav-link" href="/pages/replay.html">Le Hub en replay</a>
+                                                        <a class="nav-link" href="/pages/webinaires.html">Le Hub en replay</a>
                                                     </li>
                                                     
                                                     </li>
@@ -249,8 +249,8 @@
             <!-- Bandeau gris -->
             <div class="bg-default pt-1 pb-2">
                 <div class="container" style="display: flex; justify-content: space-around; flex-wrap: wrap;">
-                    <a href="/pages/actualites.html" class="btn btn--style1 btn--white mt-1">Actualités</a>
                     <a href="/pages/webinaires.html" class="btn btn--style1 btn--white mt-1">Webinaires</a>
+                    <a href="/pages/accompagnement.html" class="btn btn--style1 btn--white mt-1">Accompagnement</a>
                     <a href="/resources/si_samu-ficheproduit-hub.pdf" class="btn btn--style1 btn--white mt-1"
                         target="_blank">Fiche Hub Santé
                         (pdf)</a>
@@ -277,7 +277,7 @@
                     <div class="o-paragraph--columns__cards row col--eq-height mt-4">
 
                         <div class="mb-3 col-sm-6 col-lg-3">
-                            <a href="/pages/15-15.html"
+                            <a href="/pages/accompagnement.html#fonctionnel"
                                 class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0">
                                 <div class="m-card__img">
                                     <img src="/img/resize/IMG_SAMU_RC.jpg" alt="" loading="lazy">
@@ -287,17 +287,18 @@
                             </a>
                         </div>
                         <div class="mb-3 col-sm-6 col-lg-3">
-                            <div class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0">
+                            <a href="/pages/accompagnement.html#fonctionnel"
+                                class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0">
                                 <div class="m-card__img">
                                     <img src="/img/resize/tablette_RC.jpg" alt="" loading="lazy">
                                 </div>
                                 <h3 class="m-card__title h4">15-SMUR/RPIS</h3>
                                 <p class="mb-lg-1">15-SMUR/RPIS, avec les tablettes SMUR et les concentrateurs RPIS.
                                 </p>
-                            </div>
+                            </a>
                         </div>
                         <div class="mb-3 col-sm-6 col-lg-3 ">
-                            <a href="/pages/15-18.html"
+                            <a href="/pages/accompagnement.html#fonctionnel"
                                 class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0">
                                 <div class="m-card__img">
                                     <img src="/img/resize/Nexsis.jpg" alt="" loading="lazy">
@@ -531,7 +532,7 @@
                                 </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/replay.html">
+                            <a href="/pages/webinaires.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Webinaires</a>
