--- a/web/landing/pages-footer/declaration_accessibilite.html
+++ b/web/landing/pages-footer/declaration_accessibilite.html
@@ -164,13 +164,10 @@
 
         <p>L'agence du numérique en santé s'engage à rendre son internet accessible conformément à l'article 47 de la loi n° 2005-102 du 11 février 2005.</p>
 
-        <p>A cette fin, il est mis en œuvre la stratégie et l'action suivante : <b> réalisation d'un audit de conformité au premier trimestre de l'année 2025.</b> </p>
+        <p>A cette fin, il est mis en œuvre la stratégie et l'action suivante : <b>réalisation d'un audit de conformité sur l'année 2025.</b> </p>
 
         <p>La déclaration d'accessibilité s'appliquant au site Internet hub.esante.gouv.fr sera disponible à réception des résultats de l'audit sus-mentionné;
           ainsi que la feuille de route des actions qui seront mises en œuvre en cas de non-conformité. </p>
-
-
-
 
       </div>
     </div>
@@ -287,7 +284,7 @@
                                 </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/replay.html">
+                            <a href="/pages/webinaires.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Webinaires</a>
