--- a/web/landing/pages-footer/gestion_cookies.html
+++ b/web/landing/pages-footer/gestion_cookies.html
@@ -280,7 +280,7 @@
                                 </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/replay.html">
+                            <a href="/pages/webinaires.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Webinaires</a>
