--- a/web/landing/pages-footer/plan_de_site.html
+++ b/web/landing/pages-footer/plan_de_site.html
@@ -155,7 +155,7 @@
             <div class="item-list">
                 <ul>
                 <li><a href="/pages/travaux.html" class="links_sitemap__link infertile">Travaux en cours
-                <li><a href="/pages/replay.html" class="links_sitemap__link infertile">Le Hub en replay</a></li>
+                <li><a href="/pages/webinaires.html" class="links_sitemap__link infertile">Le Hub en replay</a></li>
                 </ul>
             </div>
         </li>
@@ -279,7 +279,7 @@
                                 </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/replay.html">
+                            <a href="/pages/webinaires.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Webinaires</a>
