--- a/web/landing/pages/contacts.html
+++ b/web/landing/pages/contacts.html
@@ -103,7 +103,7 @@
                                                         <a class="nav-link" href="/pages/travaux.html">Travaux en
                                                             cours</a>
                                                     <li class="nav-item common-nav-item">
-                                                        <a class="nav-link" href="/pages/replay.html">Le Hub en replay</a>
+                                                        <a class="nav-link" href="/pages/webinaires.html">Le Hub en replay</a>
                                                     </li>
                                                     
                                                     </li>
@@ -392,7 +392,7 @@
                                 </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
-                            <a href="/pages/replay.html">
+                            <a href="/pages/webinaires.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Webinaires</a>
