--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -249,7 +249,7 @@
             <!-- Bandeau gris -->
             <div class="bg-default pt-1 pb-2">
                 <div class="container" style="display: flex; justify-content: space-around; flex-wrap: wrap;">
-                    <a href="/pages/webinaires.html" class="btn btn--style1 btn--white mt-1">Webinaires</a>
+                    <a href="/pages/webinaires.html" class="btn btn--style1 btn--white mt-1">Le Hub en replay</a>
                     <a href="/pages/accompagnement.html" class="btn btn--style1 btn--white mt-1">Accompagnement</a>
                     <a href="/resources/si_samu-ficheproduit-hub.pdf" class="btn btn--style1 btn--white mt-1"
                         target="_blank">Fiche Hub Santé
