--- a/web/landing/pages/travaux.html
+++ b/web/landing/pages/travaux.html
@@ -289,7 +289,7 @@
             <!-- Bannière Enjeux 15-SMUR -->
             <div class="container paragraph-space">
                 <div class="row">
-                    <div class="col-md-8 mb-3">
+                    <div class="col-md-7 mb-3">
                         <h2>Les enjeux du 15-SMUR/RPIS </h2>
                         <div class="wysiwyg mb-3">
                             <ul>
@@ -306,16 +306,17 @@
                             <a href="/pages/accompagnement.html" class="btn btn--style1 btn--white">Ressources éditeurs</a>
                         </div>
                     </div>
-                    <div class="col-md-4 order-md-last">
+                    <div class="col-md-5 order-md-last">
                         <div class="rounded-md top-left-radius-0 bg-primary text-white px-2 py-4">
                             <div class="wysiwyg">
                                 <h3>Les pilotes</h3>
                                 <ul>
-                                    <li>SAMU 85 (BISOM / Inetum), SAMU 73 (BISOM / Appligos)</li>
-                                    <li>SAMU 80 (Exos / Exos) </li>
-                                    <li>SAMU 21-58 et 86 (Nomadeec / Inetum) </li>
-                                    <li>SAMU 68 (SMUR-T@b / Appligos), SAMU 55 (SMUR-T@b / Exos) </li>
-                                    <li>SAMU 94 (Parsys / Inetum)</li>
+                                    <li>BISOM : SAMU 85 (Inetum), SAMU 73 (Appligos)</li>
+                                    <li>Exos : SAMU 80 (Exos) </li>
+                                    <li>Nomadeec : SAMU 21-58 et 86 (Inetum) </li>
+                                    <li>Parsys : SAMU 94 (Inetum), SAMU 95 (Scriptal)</li>
+                                    <li>SMUR-t@b : SAMU 55 (Exos), SAMU 68 (Appligos), SAMU 77 (Scriptal)</li>
+                                    <li>Syopée : SAMU 35 (Inetum)</li>
                                 </ul>
                             </div>
                         </div>
