--- a/web/landing/pages/Z-Archives.html
+++ b/web/landing/pages/Z-Archives.html
@@ -32,7 +32,7 @@
                                             <a href="https://hub.esante.gouv.fr/resources/23.06%20D%C3%A9mo%20Hub%20Sant%C3%A9%20-%20ANS%20et%20partenaires.pdf"
                                                 class="btn btn--style1 btn--white external-link file-link"
                                                 target="_blank" title="Slides (pdf - 2.52Mo) (nouvelle fenêtre)">
-                                                Slides Démo #1 (pdf - 2.52Mo)
+                                                Slides (pdf - 2.52Mo)
                                             </a>
                                         </div>
                                     </div>
@@ -98,10 +98,10 @@
                 <a class="nav-link" href="#">Ressources éditeurs</a>
                 <ul class="navbar-nav nav-lvl--3">
                     <li class="nav-item common-nav-item">
-                        <a class="nav-link" href="/pages/15-18.html">15-18</a>
+                        <a class="nav-link" href="/pages/accompagnement.html">15-18</a>
                     </li>
                     <li class="nav-item common-nav-item">
-                        <a class="nav-link" href="/pages/15-15.html">15-15</a>
+                        <a class="nav-link" href="/pages/accompagnement.html">15-15</a>
                     </li>
                 </ul>
             </li>
