--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -552,8 +552,7 @@
 
                                                 <div class="col-auto mb-3">
                                                     <a href="/resources/Webinaires/23.09.14 - Hub Sante - Kick off pilotes.pdf"
-                                                       class="btn btn--style1 btn--white" target="_blank">Slides
-                                                        Kick-off (pdf - 4.7Mo)</a>
+                                                       class="btn btn--style1 btn--white" target="_blank">Slides (pdf - 4.7Mo)</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -613,8 +612,7 @@
 
                                                 <div class="col-auto mb-3">
                                                     <a href="/resources/Webinaires/23.06 Demo Hub Sante - ANS et partenaires.pdf"
-                                                       class="btn btn--style1 btn--white" target="_blank">Slides
-                                                        Démo #1 (pdf - 2.5Mo)</a>
+                                                       class="btn btn--style1 btn--white" target="_blank">Slides (pdf - 2.5Mo)</a>
                                                 </div>
                                             </div>
                                         </div>
