--- a/web/landing/pages/accompagnement.html
+++ b/web/landing/pages/accompagnement.html
@@ -241,7 +241,7 @@
             <div class="container" style="display: flex; justify-content: space-around; flex-wrap: wrap;">
                 <a href="https://bac-a-sable.hub.esante.gouv.fr/lrm/" class="btn btn--style1 btn--white mt-1" target="_blank">
                     LRM de test </a>
-                <a href="/resources/Accompagnement/Général/Guide site interface de test LRM.pdf" class="btn btn--style1 btn--white mt-1" target="_blank">
+                <a href="/resources/Accompagnement/general/Guide site interface de test LRM.pdf" class="btn btn--style1 btn--white mt-1" target="_blank">
                     Guide du LRM de test </a>
                 <a href="https://bac-a-sable.hub.esante.gouv.fr/specs/" class="btn btn--style1 btn--white mt-1"
                     target="_blank">Site de spécifications</a>
@@ -269,7 +269,7 @@
         </div>
         <div class="o-paragraph--files row col--eq-height mt-4 ">
             <div class="o-paragraph--files__item col--eq-height col-md-4 mb-3 ">
-                <a href="/resources/Accompagnement/Général/2024.04.25 - Hub Santé - Charte d'adhesion v1.0 - concertation editeurs.pdf"
+                <a href="/resources/Accompagnement/general/2024.04.25 - Hub Sante - Charte d'adhesion v1.0 - concertation editeurs.pdf"
                 class="m-file bg-gray-300 rounded-sm top-left-radius-0" target="_blank">
                  <p class="m-file__title h4 mb-1"> Charte d'adhésion
                  <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mise en concertation le 26 avril 2024</p>">
