--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -211,7 +211,7 @@
                     <div class="o-banner__clip o-banner__clip--1">
 
 
-                        <img src="/img/ans/IMG_Professionnel de santé libéral.jpeg" alt="" width="279" height="202">
+                        <img src="/img/ans/IMG_Professionnel de santé liberal.jpeg" alt="" width="279" height="202">
 
 
 
